[package]
name = "unpdf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pdf = "0.8.1"
html = "0.5.2"
clap = { version =  "4.2.4" , features = ["derive"] }
log = "0.4.0"
env_logger = "0.9.0"
image = "0.24.6"
png = "0.17.8"
jpeg2k = "0.6.6"
flate2 = "1.0.25"
